# eshelf

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  Makefile  README.md  appimage-builder.yml  db  lint_errors.txt  project.md  pyproject.toml  qwen_request.md  tmp_method.py
.github/workflows/: ci.yml
conductor/: improvement_plan.md
src/: config.py  logging_config.py  main.py
src/controller/: main_controller.py
src/database/: repository.py
src/models/: book.py  book_model.py  category.py
src/services/: book_service.py  exceptions.py  extractor.py  metadata_extractor.py  scanner.py
src/ui/: book_widget.py  main_window.py  shelf_grid.py  sidebar.py
src/ui/dialogs/: content_search_dialog.py  settings_dialog.py
tests/: conftest.py  test_book.py  test_book_model.py  test_book_service.py  test_config.py  test_config_reactivity_cli.py  test_controller.py  test_extractor.py  test_grid_integration.py  test_library_removal.py  test_main.py  test_main_window.py  test_metadata_extractor.py  test_reactivity.py  test_repository.py  test_scanner.py  test_settings_dialog.py  test_sidebar.py  test_ui.py  test_ui_expanded.py
