[project]
name = "eshelf"
version = "0.1.0"
description = "A dedicated Linux shelf app for books"
dependencies = []

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v{version}"
version_files = [
    "pyproject.toml:version"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
