[project]
name = "eshelf"
version = "0.8.2"
description = "A dedicated Linux shelf app for books"
dependencies = [
    "pdf2image",
    "pillow",
    "ebooklib",
    "PyGObject",
    "pymupdf",
    "platformdirs",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.8.2"
tag_format = "v$version"
version_files = ["pyproject.toml"]
changelog_file = "CHANGELOG.md"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
explicit_package_bases = true

[dependency-groups]
dev = [
    "commitizen>=4.15.0",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
